[package]
name = "pg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.37", features = ["serde"] }
deadpool-postgres = { version = "0.13", features = ["rt_tokio_1"] }
dotenv = "0.15"
openssl = "0.10.40"
postgres-openssl = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18" 
url = "2.2.2"