[package]
name = "pg-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.13", features = ["rt_tokio_1"] }
openssl = "0.10"
postgres-openssl = "0.5"
tokio = { version = "1.37", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.3" 
url = "2.2"
